crates/qwik-optimizer-oxc/tests/snapshots/should_convert_rest_props.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useTask$ } from "@qwik.dev/core";

export default component$<any>(({ ...props }) => {
  useTask$(() => {
    props.checked;
  });

  return "hi";
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { _restProps } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_useTask_XXXXXXXXXXXX");
export const test_component_XXXXXXXXXXXX = (_rawProps) => {
  const props = _restProps(_rawProps);
  useTaskQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_useTask_XXXXXXXXXXXX", [props]));
  return "hi";
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "_rawProps"
  ]
}
*/

=== test.tsx_test_component_useTask_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const test_component_useTask_XXXXXXXXXXXX = () => {
  const props = _captures[0];
  props.checked;
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_useTask_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component_useTask",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_useTask_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "props"
  ]
}
*/

=== DIAGNOSTICS ===

[]
