crates/qwik-optimizer-oxc/tests/snapshots/should_destructure_args.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

// the count results in _fnSignal because of the rename
// would be nice to consider it a prop too
export default component$(({ message, id, count: c, ...rest }: Record<string, any>) => {
  const renders = useStore({ renders: 0 }, { reactive: false });
  renders.renders++;
  const rerenders = renders.renders + 0;
  return (
    <div id={id}>
      <span {...rest}>
        {message} {c}
      </span>
      <div class="renders">{rerenders}</div>
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
// the count results in _fnSignal because of the rename
// would be nice to consider it a prop too
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { _restProps } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
export const test_component_XXXXXXXXXXXX = (_rawProps) => {
  const rest = _restProps(_rawProps, ["message", "id", "count"]);
  const renders = useStore(
    {
      renders: 0,
    },
    {
      reactive: false,
    },
  );
  renders.renders++;
  const rerenders = renders.renders + 0;
  return /* @__PURE__ */ _jsxSorted(
    "div",
    {
      id: _wrapProp(_rawProps, "id"),
    },
    null,
    [
      /* @__PURE__ */ _jsxSplit(
        "span",
        {
          ..._getVarProps(rest),
        },
        _getConstProps(rest),
        [_wrapProp(_rawProps, "message"), " ", _wrapProp(_rawProps, "count")],
        0,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        "div",
        null,
        {
          class: "renders",
        },
        rerenders,
        1,
        null,
      ),
    ],
    1,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "_rawProps"
  ]
}
*/

=== DIAGNOSTICS ===

[]
